--- a/WebdriverTest/pom.xml
+++ b/WebdriverTest/pom.xml
@@ -32,9 +32,9 @@
 			<version>${selenium.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.14.3</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
